--- a/collated/main/A0121658E.md
+++ b/collated/main/A0121658E.md
@@ -1,5 +1,5 @@
 # A0121658E
-###### \java\seedu\geekeep\model\GeeKeep.java
+###### /java/seedu/geekeep/model/GeeKeep.java
 ``` java
     public void markTaskDone(int index) {
         tasks.markTaskDone(index);
@@ -10,21 +10,8 @@
     }
 }
 ```
-###### \java\seedu\geekeep\model\Model.java
+###### /java/seedu/geekeep/model/Model.java
 ``` java
-package seedu.geekeep.model;
-
-import java.util.Set;
-
-import seedu.geekeep.commons.core.UnmodifiableObservableList;
-import seedu.geekeep.commons.exceptions.IllegalValueException;
-import seedu.geekeep.model.task.ReadOnlyTask;
-import seedu.geekeep.model.task.Task;
-import seedu.geekeep.model.task.UniqueTaskList;
-import seedu.geekeep.model.task.UniqueTaskList.DuplicateTaskException;
-
-public interface Model {
-
     /**
      * Signals that an undo command would fail because there is nothing to undo.
      */
@@ -37,27 +24,38 @@ public interface Model {
     public static class NothingToRedoException extends Exception {
     }
 
-    /** Adds the given task */
     void addTask(Task task) throws UniqueTaskList.DuplicateTaskException;
 
-    /** Deletes the task */
     void deleteTask(ReadOnlyTask target) throws UniqueTaskList.TaskNotFoundException;
 
-    /** Returns the filtered task list as an {@code UnmodifiableObservableList<ReadOnlyTask>} */
+    /**
+     * @return the configuration object
+     */
+    Config getConfig();
+
+    /**
+     * @return the filtered task list as an {@code UnmodifiableObservableList<ReadOnlyTask>}
+     */
     UnmodifiableObservableList<ReadOnlyTask> getFilteredTaskList();
 
-    /** Returns the GeeKeep */
     ReadOnlyGeeKeep getGeeKeep();
 
-    /** Clears existing backing model and replaces with the provided new data. */
+    /**
+     * Clears existing backing model and replaces with the provided new data.
+     */
     void resetData(ReadOnlyGeeKeep newData);
 
-    /** Updates the filter of the filtered task list to show all tasks */
+    /**
+     * Updates the filter of the filtered task list to show all tasks
+     */
     void updateFilteredListToShowAll();
 
-    /** Updates the filter of the filtered task list to filter by the given keywords */
-    void updateFilteredTaskList(Set<String> keywords);
-
+    /**
+     * Updates the filter of the filtered task list to filter by the given keywords, time and tags
+     *
+     */
+    void updateFilteredTaskList(Set<String> keywords, DateTime earlistTime,
+            DateTime latestTime, UniqueTagList tags);
     /** Updates the filter of the filtered task list to filter by status of the tasks */
     void updateFilteredTaskListToShowDone();
 
@@ -78,60 +76,18 @@ public interface Model {
     void updateTask(int filteredTaskListIndex, ReadOnlyTask updatedTask)
             throws UniqueTaskList.DuplicateTaskException, IllegalValueException;
 
-    /** Mark the specified task as done */
     void markTaskDone(int filteredTaskListIndex);
 
-    /** Mark the specified task as undone */
     void markTaskUndone(int filteredTaskListIndex);
 
-    void undo() throws NothingToUndoException;
-
-    void redo() throws NothingToRedoException;
-
-}
-
 ```
-###### \java\seedu\geekeep\model\ModelManager.java
-``` java
-package seedu.geekeep.model;
-
-import java.util.Set;
-import java.util.Stack;
-import java.util.logging.Logger;
-
-import javafx.collections.transformation.FilteredList;
-import seedu.geekeep.commons.core.ComponentManager;
-import seedu.geekeep.commons.core.LogsCenter;
-import seedu.geekeep.commons.core.TaskCategory;
-import seedu.geekeep.commons.core.UnmodifiableObservableList;
-import seedu.geekeep.commons.events.model.GeeKeepChangedEvent;
-import seedu.geekeep.commons.events.model.SwitchTaskCategoryEvent;
-import seedu.geekeep.commons.exceptions.IllegalValueException;
-import seedu.geekeep.commons.util.CollectionUtil;
-import seedu.geekeep.commons.util.StringUtil;
-import seedu.geekeep.model.task.ReadOnlyTask;
-import seedu.geekeep.model.task.Task;
-import seedu.geekeep.model.task.UniqueTaskList;
-import seedu.geekeep.model.task.UniqueTaskList.TaskNotFoundException;
-
-/**
- * Represents the in-memory model of the GeeKeep data. All changes to any model should be synchronized.
- */
-public class ModelManager extends ComponentManager implements Model {
-
-    private static final Logger logger = LogsCenter.getLogger(ModelManager.class);
-
-    private final GeeKeep geeKeep;
-    private final FilteredList<ReadOnlyTask> filteredTasks;
-
-```
-###### \java\seedu\geekeep\model\ModelManager.java
+###### /java/seedu/geekeep/model/ModelManager.java
 ``` java
     @Override
     public void resetData(ReadOnlyGeeKeep newData) {
-        pastGeeKeeps.add(new GeeKeep(geeKeep));
-        futureGeeKeeps.clear();
+        GeeKeep originalGeekeepClone = new GeeKeep(geeKeep);
         geeKeep.resetData(newData);
+        updateGeekeepHistory(originalGeekeepClone);
         indicateGeeKeepChanged();
     }
 
@@ -147,17 +103,17 @@ public class ModelManager extends ComponentManager implements Model {
 
     @Override
     public synchronized void deleteTask(ReadOnlyTask target) throws TaskNotFoundException {
-        pastGeeKeeps.add(new GeeKeep(geeKeep));
-        futureGeeKeeps.clear();
+        GeeKeep originalGeekeepClone = new GeeKeep(geeKeep);
         geeKeep.removeTask(target);
+        updateGeekeepHistory(originalGeekeepClone);
         indicateGeeKeepChanged();
     }
 
     @Override
     public synchronized void addTask(Task task) throws UniqueTaskList.DuplicateTaskException {
-        pastGeeKeeps.add(new GeeKeep(geeKeep));
-        futureGeeKeeps.clear();
+        GeeKeep originalGeekeepClone = new GeeKeep(geeKeep);
         geeKeep.addTask(task);
+        updateGeekeepHistory(originalGeekeepClone);
         updateFilteredListToShowAll();
         indicateGeeKeepChanged();
     }
@@ -167,107 +123,31 @@ public class ModelManager extends ComponentManager implements Model {
             throws UniqueTaskList.DuplicateTaskException, IllegalValueException {
         assert updatedTask != null;
 
-        pastGeeKeeps.add(new GeeKeep(geeKeep));
-        futureGeeKeeps.clear();
+        updateGeekeepHistory(geeKeep);
         int taskListIndex = filteredTasks.getSourceIndex(filteredTaskListIndex);
         geeKeep.updateTask(taskListIndex, updatedTask);
 
+        updateFilteredListToShowAll();
         indicateGeeKeepChanged();
     }
-
-    // =========== Filtered Task List Accessors =============================================================
-
-    @Override
-    public UnmodifiableObservableList<ReadOnlyTask> getFilteredTaskList() {
-        return new UnmodifiableObservableList<>(filteredTasks);
-    }
-
-    @Override
-    public void updateFilteredListToShowAll() {
-        filteredTasks.setPredicate(null);
-        raise(new SwitchTaskCategoryEvent(TaskCategory.ALL));
-    }
-
-    @Override
-    public void updateFilteredTaskList(Set<String> keywords) {
-        updateFilteredTaskList(new PredicateExpression(new TitleQualifier(keywords)));
-        raise(new SwitchTaskCategoryEvent(TaskCategory.ALL));
-    }
-
-    private void updateFilteredTaskList(Expression expression) {
-        filteredTasks.setPredicate(expression::satisfies);
-    }
-
-    // ========== Inner classes/interfaces used for filtering =================================================
-
-    interface Expression {
-        boolean satisfies(ReadOnlyTask task);
-
-        @Override
-        String toString();
-    }
-
-    private class PredicateExpression implements Expression {
-
-        private final Qualifier qualifier;
-
-        PredicateExpression(Qualifier qualifier) {
-            this.qualifier = qualifier;
-        }
-
-        @Override
-        public boolean satisfies(ReadOnlyTask task) {
-            return qualifier.run(task);
-        }
-
-        @Override
-        public String toString() {
-            return qualifier.toString();
-        }
-    }
-
-    interface Qualifier {
-        boolean run(ReadOnlyTask task);
-
-        @Override
-        String toString();
-    }
-
-    private class TitleQualifier implements Qualifier {
-        private Set<String> titleKeyWords;
-
-        TitleQualifier(Set<String> nameKeyWords) {
-            this.titleKeyWords = nameKeyWords;
-        }
-
-        @Override
-        public boolean run(ReadOnlyTask task) {
-            return titleKeyWords.stream()
-                    .filter(keyword-> StringUtil.containsWordIgnoreCase(task.getTitle().title, keyword))
-                    .findAny().isPresent();
-        }
-
-        @Override
-        public String toString() {
-            return "title=" + String.join(", ", titleKeyWords);
-        }
-    }
-
+```
+###### /java/seedu/geekeep/model/ModelManager.java
+``` java
     @Override
     public void markTaskDone(int filteredTaskListIndex) {
-        pastGeeKeeps.add(new GeeKeep(geeKeep));
-        futureGeeKeeps.clear();
+        GeeKeep originalGeekeepClone = new GeeKeep(geeKeep);
         int taskListIndex = filteredTasks.getSourceIndex(filteredTaskListIndex);
         geeKeep.markTaskDone(taskListIndex);
+        updateGeekeepHistory(originalGeekeepClone);
         indicateGeeKeepChanged();
     }
 
     @Override
     public void markTaskUndone(int filteredTaskListIndex) {
-        pastGeeKeeps.add(new GeeKeep(geeKeep));
-        futureGeeKeeps.clear();
+        GeeKeep originalGeekeepClone = new GeeKeep(geeKeep);
         int taskListIndex = filteredTasks.getSourceIndex(filteredTaskListIndex);
         geeKeep.markTaskUndone(taskListIndex);
+        updateGeekeepHistory(originalGeekeepClone);
         indicateGeeKeepChanged();
     }
 
@@ -284,15 +164,8 @@ public class ModelManager extends ComponentManager implements Model {
     }
 
 ```
-###### \java\seedu\geekeep\model\task\DateTime.java
+###### /java/seedu/geekeep/model/task/DateTime.java
 ``` java
-package seedu.geekeep.model.task;
-
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-
-import seedu.geekeep.commons.exceptions.IllegalValueException;
-
 /**
  * Represents the ending date and time of a task. Guarantees: immutable; is valid as declared in
  * {@link #isValidDateTime()}
@@ -306,31 +179,9 @@ public class DateTime {
     public static final String DEFAULT_TIME = "2359";
     public static final DateTimeFormatter FORMATTER = DateTimeFormatter.ofPattern("dd-MM-yy HHmm");
 
-    public final LocalDateTime dateTime;
-    public final String value;
-
-    /**
-     *  Validates given dateTime.
-     */
-    public static boolean isValidDateTime(String test) {
-        return test.matches(DATETIME_VALIDATION_REGEX);
-    }
-
-    public static boolean isValidDateTimeWithoutTime(String test) {
-        return test.matches(DATETIME_REGEX_WITHOUT_TIME);
-    }
-
-    public DateTime(String dateTimeString) throws IllegalValueException {
-        if (!isValidDateTime(dateTimeString)) {
-            throw new IllegalValueException(MESSAGE_DATETIME_CONSTRAINTS);
-        }
-        this.value = dateTimeString;
-        if (isValidDateTimeWithoutTime(dateTimeString)) {
-            dateTimeString = dateTimeString + " " + DEFAULT_TIME;
-        }
-        this.dateTime = LocalDateTime.parse(dateTimeString, FORMATTER);
-    }
-
+```
+###### /java/seedu/geekeep/model/task/DateTime.java
+``` java
     @Override
     public boolean equals(Object other) {
         return other == this // short circuit if same object
@@ -350,55 +201,51 @@ public class DateTime {
 
 }
 ```
-###### \java\seedu\geekeep\model\task\Location.java
+###### /java/seedu/geekeep/model/task/Description.java
 ``` java
-package seedu.geekeep.model.task;
-
-import seedu.geekeep.commons.exceptions.IllegalValueException;
-
 /**
- * Represents a Task's location in GeeKeep. Guarantees: immutable; is valid as declared in
- * {@link #isValidLocation(String)}
+ * Represents a Task's description in GeeKeep. Guarantees: immutable; is valid as declared in
+ * {@link #isValidDescription(String)}
  */
-public class Location {
+public class Description {
 
-    public static final String MESSAGE_LOCATION_CONSTRAINTS =
-            "Task location can take any values, and it should not be blank";
+    public static final String MESSAGE_DESCRIPTION_CONSTRAINTS =
+            "Task description can take any values, and it should not be blank";
 
     /*
-     * The first character of the location must not be a whitespace, otherwise " " (a blank string) becomes a valid
+     * The first character of the description must not be a whitespace, otherwise " " (a blank string) becomes a valid
      * input.
      */
-    public static final String LOCATION_VALIDATION_REGEX = ".*";
+    public static final String DESCRIPTION_VALIDATION_REGEX = ".*";
 
     public final String value;
 
     /**
-     * Returns true if a given string is a valid task location.
+     * Returns true if a given string is a valid task description.
      */
-    public static boolean isValidLocation(String test) {
-        return test.matches(LOCATION_VALIDATION_REGEX);
+    public static boolean isValidDescription(String testDescription) {
+        return testDescription.matches(DESCRIPTION_VALIDATION_REGEX);
     }
 
     /**
-     * Validates given location.
+     * Validates given description.
      *
      * @throws IllegalValueException
-     *             if given location string is invalid.
+     *             if given description string is invalid.
      */
-    public Location(String location) throws IllegalValueException {
-        assert location != null;
-        if (!isValidLocation(location)) {
-            throw new IllegalValueException(MESSAGE_LOCATION_CONSTRAINTS);
+    public Description(String description) throws IllegalValueException {
+        assert description != null;
+        if (!isValidDescription(description)) {
+            throw new IllegalValueException(MESSAGE_DESCRIPTION_CONSTRAINTS);
         }
-        this.value = location;
+        this.value = description;
     }
 
     @Override
     public boolean equals(Object other) {
         return other == this // short circuit if same object
-                || (other instanceof Location // instanceof handles nulls
-                        && this.value.equals(((Location) other).value)); // state check
+                || (other instanceof Description // instanceof handles nulls
+                        && this.value.equals(((Description) other).value)); // state check
     }
 
     @Override
@@ -413,81 +260,43 @@ public class Location {
 
 }
 ```
-###### \java\seedu\geekeep\model\task\ReadOnlyTask.java
+###### /java/seedu/geekeep/model/task/ReadOnlyTask.java
 ``` java
-package seedu.geekeep.model.task;
-
-import seedu.geekeep.model.tag.UniqueTagList;
-
 /**
  * A read-only immutable interface for a Task in the Task Manager. Implementations should guarantee: details are
  * present and not null, field values are validated.
  */
 public interface ReadOnlyTask {
 
+```
+###### /java/seedu/geekeep/model/task/ReadOnlyTask.java
+``` java
     /**
-     * Formats the Task as text, showing all contact details.
+     * Returns true if the task does not have a start datetime or end datetime
+     * @return floating task identity
      */
-    default String getAsText() {
-        final StringBuilder builder = new StringBuilder();
-        builder.append(getTitle()).append(" Ending DateTime: ").append(getEndDateTime())
-               .append(" Starting DateTime: ").append(getStartDateTime())
-               .append(" Location: ").append(getLocation()).append(" Tags: ");
-        getTags().forEach(builder::append);
-        return builder.toString();
-    }
-
-    DateTime getEndDateTime();
-
-    Location getLocation();
-
-    DateTime getStartDateTime();
-
-    /**
-     * The returned TagList is a deep copy of the internal TagList,
-     * changes on the returned list will not affect the
-     * task's internal tags.
-     */
-    UniqueTagList getTags();
-
-    Title getTitle();
-
-    /**
-     * Returns true if both have the same state. (interfaces cannot override .equals)
-     */
-    default boolean isSameStateAs(ReadOnlyTask other) {
-        return other == this // short circuit if same object
-                || (other != null
-                        && other.isEvent()
-                        && this.isEvent() // this is first to avoid NPE below
-                        && other.getTitle().equals(this.getTitle()) // state checks here onwards
-                        && other.getStartDateTime().equals(this.getStartDateTime())
-                        && other.getEndDateTime().equals(this.getEndDateTime())
-                        && this.isDone() == other.isDone())
-                || (other != null
-                        && other.isDeadline()
-                        && this.isDeadline()
-                        && other.getTitle().equals(this.getTitle()) // state checks here onwards
-                        && other.getEndDateTime().equals(this.getEndDateTime())
-                        && this.isDone() == other.isDone())
-                || (other != null
-                        && other.isFloatingTask()
-                        && this.isFloatingTask()
-                        && other.getTitle().equals(this.getTitle()) // state checks here onwards
-                        && this.isDone() == other.isDone());
-    }
-
-
     boolean isFloatingTask();
 
+    /**
+     * Returns true if the task has a start datetime and an end datetime
+     * @return event identity
+     */
     boolean isEvent();
 
+    /**
+     * Returns true if the task has an end datetime but not a start datetime
+     * @return deadline identity
+     */
     boolean isDeadline();
 
+    /**
+     * Returns true if the task is marked as completed by user
+     * @return status of the task
+     */
     boolean isDone();
 }
 ```
-###### \java\seedu\geekeep\model\task\Task.java
+###### /java/seedu/geekeep/model/task/Task.java
 ``` java
 package seedu.geekeep.model.task;
 
@@ -502,9 +311,9 @@ import seedu.geekeep.model.tag.UniqueTagList;
 public class Task implements ReadOnlyTask  {
 
     public static final String MESSAGE_DATETIME_MATCH_CONSTRAINTS =
-            "Starting date and time must be matched with a ending date and time";
+            "Starting date and time must be matched with a valid ending date and time";
     public static final String MESSAGE_ENDDATETIME_LATER_CONSTRAINTS =
-            "Starting date and time must be earlier than ending date and time";
+            "Event cannot end before it begins";
     public static final int EVENT_PRIORITY = 0;
     public static final int FLOATING_TASK_PRIORITY = 1;
     public static final int DEADLINE_PRIORITY = 2;
@@ -512,7 +321,7 @@ public class Task implements ReadOnlyTask  {
     private Title title;
     private DateTime endDateTime;
     private DateTime startDateTime;
-    private Location location;
+    private Description description;
     private boolean isDone;
 
     private UniqueTagList tags;
@@ -522,11 +331,11 @@ public class Task implements ReadOnlyTask  {
      */
     public Task(ReadOnlyTask source) throws IllegalValueException {
         this(source.getTitle(), source.getStartDateTime(),
-                source.getEndDateTime(), source.getLocation(), source.getTags(), source.isDone());
+                source.getEndDateTime(), source.getDescriptoin(), source.getTags(), source.isDone());
     }
 
     public Task(Title title, DateTime startDateTime,
-                DateTime endDateTime, Location location,
+                DateTime endDateTime, Description description,
                 UniqueTagList tags, boolean isDone) throws IllegalValueException {
         assert title != null;
         if (startDateTime != null && endDateTime == null) {
@@ -540,7 +349,7 @@ public class Task implements ReadOnlyTask  {
         this.title = title;
         this.endDateTime = endDateTime;
         this.startDateTime = startDateTime;
-        this.location = location;
+        this.description = description;
         this.isDone = isDone;
         this.tags = new UniqueTagList(tags); // protect internal tags from changes in the arg list
     }
@@ -558,11 +367,10 @@ public class Task implements ReadOnlyTask  {
     }
 
     @Override
-    public Location getLocation() {
-        return location;
+    public Description getDescriptoin() {
+        return description;
     }
 
-    @Override
     public DateTime getStartDateTime() {
         return startDateTime;
     }
@@ -577,60 +385,9 @@ public class Task implements ReadOnlyTask  {
         return title;
     }
 
-    @Override
-    public int hashCode() {
-        // use this method for custom fields hashing instead of implementing your own
-        return Objects.hash(title, endDateTime, startDateTime, location, tags);
-    }
-
 ```
-###### \java\seedu\geekeep\model\task\Task.java
+###### /java/seedu/geekeep/model/task/Task.java
 ``` java
-    /**
-     * Updates this task with the details of {@code replacement}.
-     */
-    public void resetData(ReadOnlyTask replacement) {
-        assert replacement != null;
-
-        this.setTitle(replacement.getTitle());
-        this.setEndDateTime(replacement.getEndDateTime());
-        this.setStartDateTime(replacement.getStartDateTime());
-        this.setLocation(replacement.getLocation());
-        this.setTags(replacement.getTags());
-        this.setDone(replacement.isDone());
-    }
-
-    public void setStartDateTime(DateTime startDateTime) {
-        assert startDateTime != null;
-        this.startDateTime = startDateTime;
-    }
-
-    public void setEndDateTime(DateTime endDateTime) {
-        assert endDateTime != null;
-        this.endDateTime = endDateTime;
-    }
-
-    public void setLocation(Location location) {
-        assert location != null;
-        this.location = location;
-    }
-
-    public void setDone(boolean isDone) {
-        this.isDone = isDone;
-    }
-
-    /**
-     * Replaces this Task's tags with the tags in the argument tag list.
-     */
-    public void setTags(UniqueTagList replacement) {
-        tags.setTags(replacement);
-    }
-
-    public void setTitle(Title title) {
-        assert title != null;
-        this.title = title;
-    }
-
     @Override
     public String toString() {
         return getAsText();
@@ -655,6 +412,50 @@ public class Task implements ReadOnlyTask  {
     public boolean isDone() {
         return isDone;
     }
+    /**
+     * Updates this task with the details of {@code replacement}.
+     */
+    public void resetData(ReadOnlyTask replacement) {
+        assert replacement != null;
+
+        this.setTitle(replacement.getTitle());
+        this.setEndDateTime(replacement.getEndDateTime());
+        this.setStartDateTime(replacement.getStartDateTime());
+        this.setDescription(replacement.getDescriptoin());
+        this.setTags(replacement.getTags());
+        this.setDone(replacement.isDone());
+    }
+
+    public void setStartDateTime(DateTime startDateTime) {
+        assert startDateTime != null;
+        this.startDateTime = startDateTime;
+    }
+
+    public void setEndDateTime(DateTime endDateTime) {
+        assert endDateTime != null;
+        this.endDateTime = endDateTime;
+    }
+
+    public void setDescription(Description description) {
+        assert description != null;
+        this.description = description;
+    }
+
+    public void setDone(boolean isDone) {
+        this.isDone = isDone;
+    }
+
+    /**
+     * Replaces this Task's tags with the tags in the argument tag list.
+     */
+    public void setTags(UniqueTagList replacement) {
+        tags.setTags(replacement);
+    }
+
+    public void setTitle(Title title) {
+        assert title != null;
+        this.title = title;
+    }
 
     public void markDone() {
         setDone(true);
@@ -666,12 +467,8 @@ public class Task implements ReadOnlyTask  {
 
 }
 ```
-###### \java\seedu\geekeep\model\task\Title.java
+###### /java/seedu/geekeep/model/task/Title.java
 ``` java
-package seedu.geekeep.model.task;
-
-import seedu.geekeep.commons.exceptions.IllegalValueException;
-
 /**
  * Represents a Task's title in the Task Manager. Guarantees: immutable; is valid as declared in
  * {@link #isValidTitle(String)}
@@ -692,8 +489,8 @@ public class Title {
     /**
      * Returns true if a given string is a valid task title.
      */
-    public static boolean isValidTitle(String test) {
-        return test.matches(TITLE_VALIDATION_REGEX);
+    public static boolean isValidTitle(String testTitle) {
+        return testTitle.matches(TITLE_VALIDATION_REGEX);
     }
 
     /**
@@ -730,32 +527,8 @@ public class Title {
 
 }
 ```
-###### \java\seedu\geekeep\model\task\UniqueTaskList.java
+###### /java/seedu/geekeep/model/task/UniqueTaskList.java
 ``` java
-package seedu.geekeep.model.task;
-
-import java.util.Iterator;
-import java.util.List;
-
-import javafx.collections.FXCollections;
-import javafx.collections.ObservableList;
-import seedu.geekeep.commons.core.UnmodifiableObservableList;
-import seedu.geekeep.commons.exceptions.DuplicateDataException;
-import seedu.geekeep.commons.exceptions.IllegalValueException;
-import seedu.geekeep.commons.util.CollectionUtil;
-
-/**
- * A list of tasks that enforces uniqueness between its elements and does not allow nulls.
- *
- * Supports a minimal set of list operations.
- *
- * @see Task#equals(Object)
- * @see CollectionUtil#elementsAreUnique(Collection)
- */
-public class UniqueTaskList implements Iterable<Task> {
-
-    private final ObservableList<Task> internalList = FXCollections.observableArrayList();
-
     /**
      * Signals that an operation would have violated the 'no duplicates' property of the list.
      */
@@ -787,97 +560,19 @@ public class UniqueTaskList implements Iterable<Task> {
         internalList.sort((thisTask, otherTask) -> thisTask.comparePriorityAndDatetimeAndTitle(otherTask));
     }
 
-    public UnmodifiableObservableList<Task> asObservableList() {
-        return new UnmodifiableObservableList<>(internalList);
-    }
-
-    /**
-     * Returns true if the list contains an equivalent task as the given argument.
-     */
-    public boolean contains(ReadOnlyTask toCheck) {
-        assert toCheck != null;
-        return internalList.contains(toCheck);
-    }
-
-    @Override
-    public boolean equals(Object other) {
-        return other == this // short circuit if same object
-                || (other instanceof UniqueTaskList // instanceof handles nulls
-                        && this.internalList.equals(((UniqueTaskList) other).internalList));
-    }
-
-    @Override
-    public int hashCode() {
-        return internalList.hashCode();
-    }
-
-    @Override
-    public Iterator<Task> iterator() {
-        return internalList.iterator();
-    }
-
-    /**
-     * Removes the equivalent task from the list.
-     *
-     * @throws TaskNotFoundException
-     *             if no such task could be found in the list.
-     */
-    public boolean remove(ReadOnlyTask toRemove) throws TaskNotFoundException {
-        assert toRemove != null;
-        final boolean taskFoundAndDeleted = internalList.remove(toRemove);
-        if (!taskFoundAndDeleted) {
-            throw new TaskNotFoundException();
-        }
-        internalList.sort((thisTask, otherTask) -> thisTask.getPriority() - otherTask.getPriority());
-        return taskFoundAndDeleted;
-    }
-
-    public void setTasks(List<? extends ReadOnlyTask> tasks)
-            throws DuplicateTaskException, IllegalValueException {
-        final UniqueTaskList replacement = new UniqueTaskList();
-        for (final ReadOnlyTask task : tasks) {
-            replacement.add(new Task(task));
-        }
-        setTasks(replacement);
-    }
-
-    public void setTasks(UniqueTaskList replacement) {
-        this.internalList.setAll(replacement.internalList);
-    }
-
-    /**
-     * Updates the task in the list at position {@code index} with {@code updatedTask}.
-     *
-     * @throws DuplicateTaskException
-     *             if updating the task's details causes the task to be equivalent to another existing task in the
-     *             list.
-     * @throws IndexOutOfBoundsException
-     *             if {@code index} < 0 or >= the size of the list.
-     */
-    public void updateTask(int index, ReadOnlyTask updatedTask) throws DuplicateTaskException {
-        assert updatedTask != null;
-
-        Task taskToUpdate = internalList.get(index);
-        if (!taskToUpdate.equals(updatedTask) && internalList.contains(updatedTask)) {
-            throw new DuplicateTaskException();
-        }
-
-        taskToUpdate.resetData(updatedTask);
-        // TODO: The code below is just a workaround to notify observers of the updated task.
-        // The right way is to implement observable properties in the Task class.
-        // Then, TaskCard should then bind its text labels to those observable properties.
-        internalList.set(index, taskToUpdate);
-        internalList.sort((thisTask, otherTask) -> thisTask.getPriority() - otherTask.getPriority());
-    }
-
+```
+###### /java/seedu/geekeep/model/task/UniqueTaskList.java
+``` java
     public void markTaskDone(int index) {
         Task taskToMark = internalList.get(index);
         taskToMark.markDone();
+        internalList.set(index, taskToMark);
     }
 
     public void markTaskUndone(int index) {
         Task taskToMark = internalList.get(index);
         taskToMark.markUndone();
+        internalList.set(index, taskToMark);
     }
 
 }
