--- a/collated/main/A0148037E.md
+++ b/collated/main/A0148037E.md
@@ -1,5 +1,5 @@
 # A0148037E
-###### \java\seedu\geekeep\commons\core\TaskCategory.java
+###### /java/seedu/geekeep/commons/core/TaskCategory.java
 ``` java
 package seedu.geekeep.commons.core;
 
@@ -9,7 +9,7 @@ public enum TaskCategory {
     UNDONE;
 }
 ```
-###### \java\seedu\geekeep\commons\events\model\SwitchTaskCategoryEvent.java
+###### /java/seedu/geekeep/commons/events/model/SwitchTaskCategoryEvent.java
 ``` java
 package seedu.geekeep.commons.events.model;
 
@@ -30,7 +30,7 @@ public class SwitchTaskCategoryEvent extends BaseEvent {
     }
 }
 ```
-###### \java\seedu\geekeep\commons\events\ui\TaskPanelSelectionChangedEvent.java
+###### /java/seedu/geekeep/commons/events/ui/TaskPanelSelectionChangedEvent.java
 ``` java
 package seedu.geekeep.commons.events.ui;
 
@@ -59,7 +59,7 @@ public class TaskPanelSelectionChangedEvent extends BaseEvent {
     }
 }
 ```
-###### \java\seedu\geekeep\logic\commands\FindCommand.java
+###### /java/seedu/geekeep/logic/commands/FindCommand.java
 ``` java
 package seedu.geekeep.logic.commands;
 
@@ -80,16 +80,16 @@ public class FindCommand extends Command {
 
     public static final String COMMAND_WORD = "find";
 
-    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Finds all tasks whose titles contain any of "
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Finds all tasks which titles contain any of "
             + "the specified keywords (case-sensitive)\n"
-            + "or whose date is between specified time duration "
-            + "or whose tag list contains any of the specified tags.\n "
-            + "Parameters: [KEYWORD]... [a/EARLIEST_TIME] [b/LATEST_TIME] [t/TAG]...\n"
+            + "and/or which date is within the specified time duration "
+            + "and/or which tag list contains any of the specified tags.\n "
+            + "Parameters: [KEYWORD...] [a/AFTER_DATETIME] [b/BEFORE_DATETIME] [t/TAGS...]\n"
             + "Example: " + COMMAND_WORD + " CS3230 Midterm a/04-04-17 0000 t/exam";
-    public static final String MESSAGE_TIME_CONSTRAINTS = "The time a task happens before should be later "
-                                                           + "than that it happens after!";
+    public static final String MESSAGE_TIME_CONSTRAINTS = "The before date and time must be later than "
+            + "the after date and time.";
 
-    public static final String MESSAGE_SUCCESS = " GeeKeep is showing all the tasks which:\n";
+    public static final String MESSAGE_SUCCESS = "\nGeeKeep is showing all the tasks which:\n";
 
     private final Set<String> keywords;
     private final UniqueTagList tags;
@@ -133,21 +133,21 @@ public class FindCommand extends Command {
             Optional<String> latestTime,
             Set<String> tags) {
         if (!keywords.isEmpty()) {
-            datailedSuccessMsg  += "Contains any of keywords in " + keywords + " in title;\n";
+            datailedSuccessMsg  += "Contains the keyword(s) " + keywords + " in title\n";
         }
 
         if (earliestTime.isPresent()) {
-            datailedSuccessMsg += "Has starting time[event] or deadline[deadline] after "
-                              + earliestTime.get() + ";\n";
+            datailedSuccessMsg += "Happens after "
+                              + earliestTime.get() + "\n";
         }
 
         if (latestTime.isPresent()) {
-            datailedSuccessMsg += "Has starting time[event] or deadline[deadline] before "
-                              + latestTime.get() + ";\n";
+            datailedSuccessMsg += "Happens before "
+                              + latestTime.get() + "\n";
         }
 
         if (!tags.isEmpty()) {
-            datailedSuccessMsg += "Has any of tags in " + tags + ";\n";
+            datailedSuccessMsg += "Contains the tags " + tags + "\n";
         }
     }
 
@@ -163,12 +163,12 @@ public class FindCommand extends Command {
     }
 }
 ```
-###### \java\seedu\geekeep\logic\parser\CliSyntax.java
+###### /java/seedu/geekeep/logic/parser/CliSyntax.java
 ``` java
     public static final Prefix PREFIX_BEFORE_DATETIME = new Prefix("b/");
     public static final Prefix PREFIX_AFTER_DATETIME = new Prefix("a/");
 ```
-###### \java\seedu\geekeep\logic\parser\FindCommandParser.java
+###### /java/seedu/geekeep/logic/parser/FindCommandParser.java
 ``` java
 package seedu.geekeep.logic.parser;
 
@@ -228,7 +228,25 @@ public class FindCommandParser {
 
 }
 ```
-###### \java\seedu\geekeep\model\ModelManager.java
+###### /java/seedu/geekeep/logic/parser/ListCommandParser.java
+``` java
+package seedu.geekeep.logic.parser;
+
+import seedu.geekeep.logic.commands.Command;
+import seedu.geekeep.logic.commands.IncorrectCommand;
+import seedu.geekeep.logic.commands.ListCommand;
+
+public class ListCommandParser {
+    public Command parse(String args) {
+        if (!args.isEmpty()) {
+            return new IncorrectCommand(ListCommand.MESSAGE_USAGE);
+        } else {
+            return new ListCommand();
+        }
+    }
+}
+```
+###### /java/seedu/geekeep/model/ModelManager.java
 ``` java
     @Override
     /**
@@ -258,7 +276,7 @@ public class FindCommandParser {
     }
 
 ```
-###### \java\seedu\geekeep\model\ModelManager.java
+###### /java/seedu/geekeep/model/ModelManager.java
 ``` java
     private class TitleQualifier implements Qualifier {
         private Set<String> titleKeyWords;
@@ -332,20 +350,20 @@ public class FindCommandParser {
         }
     }
 ```
-###### \java\seedu\geekeep\model\tag\UniqueTagList.java
+###### /java/seedu/geekeep/model/tag/UniqueTagList.java
 ``` java
     public boolean isEmpty() {
         return internalList.isEmpty();
     }
 ```
-###### \java\seedu\geekeep\model\task\DateTime.java
+###### /java/seedu/geekeep/model/task/DateTime.java
 ``` java
     //with the constraint of DD-MM-YY, the max date time should be 2099-12-31 2359
     //and the min date time should be 2000-01-01 0000;
     public static final String MAX_TIME = "31-12-99 2359";
     public static final String MIN_TIME = "01-01-00 0000";
 ```
-###### \java\seedu\geekeep\model\task\DateTime.java
+###### /java/seedu/geekeep/model/task/DateTime.java
 ``` java
     /**
      * Returns the min date time GeeKeep currently supports
@@ -375,28 +393,58 @@ public class FindCommandParser {
         return maxDateTime;
     }
 ```
-###### \java\seedu\geekeep\model\task\DateTime.java
+###### /java/seedu/geekeep/model/task/DateTime.java
 ``` java
     public int compare(DateTime otherTime) {
         return dateTime.compareTo(otherTime.dateTime);
     }
 
 ```
-###### \java\seedu\geekeep\model\task\ReadOnlyTask.java
+###### /java/seedu/geekeep/model/task/ReadOnlyTask.java
 ``` java
     public int getPriority();
-
+```
+###### /java/seedu/geekeep/model/task/ReadOnlyTask.java
+``` java
+    /**
+     * Get the task's DateTime that is used to compare date time.
+     * For events, the startDateTime is used for comparison.
+     * For deadlines, the endDateTime is used for comparison.
+     * @return DateTime object
+     */
     DateTime getReferenceDateTime();
 
+    /**
+     * Compares this task's type priority with another.
+     * @param otherTask
+     * @return a comparator value, negative if less, positive if greater
+     */
     public int comparePriority(ReadOnlyTask otherTask);
 
+    /**
+     * Compares this task's reference datetime with another in chronological order.
+     * @param otherTask
+     * @return a comparator value, negative if less, positive if greater
+     */
     int compareDate(ReadOnlyTask otherTask);
 
+    /**
+     * Compares this task's type priority and reference datetime with another.
+     * Compares this task's title with another in lexicographic order if both are floating tasks.
+     * @param otherTask
+     * @return a comparator value, negative if less, positive if greater
+     */
     public int comparePriorityAndDatetimeAndTitle(ReadOnlyTask otherTask);
 
+    /**
+     * Compares this task's title with another in lexicographic order.
+     * @param otherTask
+     * @return a comparator value, negative if less, positive if greater
+     */
     public int compareTitle(ReadOnlyTask otherTask);
+
 ```
-###### \java\seedu\geekeep\model\task\Task.java
+###### /java/seedu/geekeep/model/task/Task.java
 ``` java
     @Override
     /**
@@ -415,7 +463,7 @@ public class FindCommandParser {
     }
 
 ```
-###### \java\seedu\geekeep\ui\MainWindow.java
+###### /java/seedu/geekeep/ui/MainWindow.java
 ``` java
     // Independent Ui parts residing in this Ui container
     private TaskListPanel floatingTaskListPanel;
@@ -439,7 +487,7 @@ public class FindCommandParser {
     private AnchorPane deadlineListPanelPlaceholder;
 
 ```
-###### \java\seedu\geekeep\ui\MainWindow.java
+###### /java/seedu/geekeep/ui/MainWindow.java
 ``` java
     void fillInnerParts() {
         eventListPanel = new TaskListPanel("event",
@@ -483,7 +531,7 @@ public class FindCommandParser {
     }
 
 ```
-###### \java\seedu\geekeep\ui\TaskCard.java
+###### /java/seedu/geekeep/ui/TaskCard.java
 ``` java
 package seedu.geekeep.ui;
 
@@ -515,34 +563,8 @@ public class TaskCard extends UiPart<Region> {
     @FXML
     private FlowPane tags;
 
-    public TaskCard(ReadOnlyTask task, int displayedIndex) {
-        super(FXML);
-        title.setText(task.getTitle().title);
-        id.setText("#" + displayedIndex + " ");
-        done.setSelected(task.isDone());
-        if (task.getEndDateTime() != null && task.getStartDateTime() != null) {
-            date.setText("From: " + task.getStartDateTime() + " until " + task.getEndDateTime());
-        } else if (task.getEndDateTime() != null && task.getStartDateTime() == null) {
-            date.setText("By: " + task.getEndDateTime().value);
-        } else {
-            date.setText("-");
-        }
-
-        if (task.getDescriptoin() == null) {
-            descriptionOfTask.setText("Details: -");
-        } else {
-            descriptionOfTask.setText("Details: " + task.getDescriptoin().value);
-        }
-
-        initTags(task);
-    }
-
-    private void initTags(ReadOnlyTask task) {
-        task.getTags().forEach(tag -> tags.getChildren().add(new Label(tag.tagName)));
-    }
-}
 ```
-###### \java\seedu\geekeep\ui\TaskListPanel.java
+###### /java/seedu/geekeep/ui/TaskListPanel.java
 ``` java
 package seedu.geekeep.ui;
 
@@ -688,7 +710,7 @@ public class TaskListPanel extends UiPart<Region> {
 
 }
 ```
-###### \java\seedu\geekeep\ui\UiManager.java
+###### /java/seedu/geekeep/ui/UiManager.java
 ``` java
     @Subscribe
     private void handleSwitchTaskCategoryEvent(SwitchTaskCategoryEvent event) {
@@ -700,7 +722,7 @@ public class TaskListPanel extends UiPart<Region> {
 
 }
 ```
-###### \resources\view\DeadlineListPanel.fxml
+###### /resources/view/DeadlineListPanel.fxml
 ``` fxml
 <?import com.jfoenix.controls.JFXTabPane?>
 <?import java.net.URL?>
@@ -766,7 +788,7 @@ public class TaskListPanel extends UiPart<Region> {
     </children>
 </VBox>
 ```
-###### \resources\view\EventListPanel.fxml
+###### /resources/view/EventListPanel.fxml
 ``` fxml
 <?import com.jfoenix.controls.JFXTabPane?>
 <?import java.net.URL?>
@@ -832,7 +854,7 @@ public class TaskListPanel extends UiPart<Region> {
     </children>
 </VBox>
 ```
-###### \resources\view\FloatingTaskListPanel.fxml
+###### /resources/view/FloatingTaskListPanel.fxml
 ``` fxml
 <?import com.jfoenix.controls.JFXTabPane?>
 <?import java.net.URL?>
@@ -898,7 +920,7 @@ public class TaskListPanel extends UiPart<Region> {
     </children>
 </VBox>
 ```
-###### \resources\view\MainWindow.fxml
+###### /resources/view/MainWindow.fxml
 ``` fxml
       <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.1, 0.4, 0.7" VBox.vgrow="ALWAYS">
          <items>
