--- a/collated/test/A0147622H.md
+++ b/collated/test/A0147622H.md
@@ -1,5 +1,5 @@
 # A0147622H
-###### \java\guitests\RedoCommandTest.java
+###### /java/guitests/RedoCommandTest.java
 ``` java
 package guitests;
 
@@ -43,7 +43,7 @@ public class RedoCommandTest extends GeeKeepGuiTest {
 
 }
 ```
-###### \java\guitests\UndoCommandTest.java
+###### /java/guitests/UndoCommandTest.java
 ``` java
 package guitests;
 
@@ -79,47 +79,4 @@ public class UndoCommandTest extends GeeKeepGuiTest {
     }
 
 }
-```
-###### \java\seedu\geekeep\logic\LogicManagerTest.java
-``` java
-    @Test
-    public void execute_undo_redo_errorMessageShown() throws Exception {
-        String expectedMessage = String.format(UndoCommand.MESSAGE_NOTHING_TO_UNDO);
-        assertCommandFailure("undo", expectedMessage);
-
-        expectedMessage = String.format(RedoCommand.MESSAGE_NOTHING_TO_REDO);
-        assertCommandFailure("redo", expectedMessage);
-    }
-
-    @Test
-    public void execute_undo_redo_Success() throws Exception {
-        TestDataHelper helper = new TestDataHelper();
-        List<Task> threeTasks = helper.generateTaskList(3);
-
-        GeeKeep expectedAB = helper.generateGeeKeep(threeTasks);
-        expectedAB.removeTask(threeTasks.get(2));
-        helper.addToModel(model, threeTasks);
-
-        assertCommandSuccess("delete 3",
-                String.format(DeleteCommand.MESSAGE_DELETE_TASK_SUCCESS, threeTasks.get(2)),
-                expectedAB,
-                expectedAB.getTaskList());
-
-        // Add deleted task back to expected Geekeep
-        expectedAB.addTask(threeTasks.get(2));
-
-        assertCommandSuccess("undo",
-                String.format(UndoCommand.MESSAGE_SUCCESS),
-                expectedAB,
-                expectedAB.getTaskList());
-
-        // Deleted task from expected Geekeep again
-        expectedAB.removeTask(threeTasks.get(2));
-
-        assertCommandSuccess("redo",
-                String.format(RedoCommand.MESSAGE_SUCCESS),
-                expectedAB,
-                expectedAB.getTaskList());
-    }
-
 ```
