--- a/collated/main/A0147622H.md
+++ b/collated/main/A0147622H.md
@@ -1,5 +1,5 @@
 # A0147622H
-###### \java\seedu\geekeep\logic\commands\RedoCommand.java
+###### /java/seedu/geekeep/logic/commands/RedoCommand.java
 ``` java
 package seedu.geekeep.logic.commands;
 
@@ -13,21 +13,21 @@ public class RedoCommand extends Command {
 
     public static final String COMMAND_WORD = "redo";
 
-    public static final String MESSAGE_SUCCESS = "Redid previous undid command";
+    public static final String MESSAGE_SUCCESS = "Redid previous undid command: %1$s";
     public static final String MESSAGE_NOTHING_TO_REDO = "Nothing to redo";
 
     @Override
     public CommandResult execute() throws CommandException {
         try {
-            model.redo();
-            return new CommandResult(MESSAGE_SUCCESS);
+            String commandTextredid = model.redo();
+            return new CommandResult(String.format(MESSAGE_SUCCESS, commandTextredid));
         } catch (NothingToRedoException e) {
             throw new CommandException(MESSAGE_NOTHING_TO_REDO);
         }
     }
 }
 ```
-###### \java\seedu\geekeep\logic\commands\UndoCommand.java
+###### /java/seedu/geekeep/logic/commands/UndoCommand.java
 ``` java
 package seedu.geekeep.logic.commands;
 
@@ -41,21 +41,21 @@ public class UndoCommand extends Command {
 
     public static final String COMMAND_WORD = "undo";
 
-    public static final String MESSAGE_SUCCESS = "Undid previous command";
+    public static final String MESSAGE_SUCCESS = "Undid command: %1$s";
     public static final String MESSAGE_NOTHING_TO_UNDO = "Nothing to undo";
 
     @Override
     public CommandResult execute() throws CommandException {
         try {
-            model.undo();
-            return new CommandResult(MESSAGE_SUCCESS);
+            String commandTextUndid = model.undo();
+            return new CommandResult(String.format(MESSAGE_SUCCESS, commandTextUndid));
         } catch (NothingToUndoException e) {
             throw new CommandException(MESSAGE_NOTHING_TO_UNDO);
         }
     }
 }
 ```
-###### \java\seedu\geekeep\logic\parser\Parser.java
+###### /java/seedu/geekeep/logic/parser/Parser.java
 ``` java
         case UndoCommand.COMMAND_WORD:
             return new UndoCommand();
@@ -64,58 +64,154 @@ public class UndoCommand extends Command {
             return new RedoCommand();
 
 ```
-###### \java\seedu\geekeep\model\ModelManager.java
+###### /java/seedu/geekeep/model/Model.java
 ``` java
-    private final Stack<GeeKeep> pastGeeKeeps;
-    private final Stack<GeeKeep> futureGeeKeeps;
+    String undo() throws NothingToUndoException;
+
+    String redo() throws NothingToRedoException;
+
+    List<String> getCommandHistory();
+
+    void appendCommandHistory(String commandText);
+
+    void updateUndoableCommandHistory(String commandText);
+
+    void setGeekeepFilePath(String filePath);
+
+```
+###### /java/seedu/geekeep/model/ModelManager.java
+``` java
+    private final Stack<ReadOnlyGeeKeep> pastGeeKeeps;
+    private final Stack<ReadOnlyGeeKeep> futureGeeKeeps;
+    private final List<String> commandHistory;
+    private final List<String> undoableCommandHistory;
+    private int undoableCommandHistoryIndex;
 
     /**
      * Initializes a ModelManager with the given geekeep and userPrefs.
      */
-    public ModelManager(ReadOnlyGeeKeep geeKeep, UserPrefs userPrefs) {
+    public ModelManager(Config config, ReadOnlyGeeKeep geeKeep, UserPrefs userPrefs) {
         super();
-        assert !CollectionUtil.isAnyNull(geeKeep, userPrefs);
+        assert !CollectionUtil.isAnyNull(config, geeKeep, userPrefs);
 
-        logger.fine("Initializing with GeeKeep: " + geeKeep + " and user prefs " + userPrefs);
+        logger.fine(
+                "Initializing with" + " config " + config + " GeeKeep " + geeKeep + " and user prefs " + userPrefs);
 
+        this.config = config;
         this.geeKeep = new GeeKeep(geeKeep);
         filteredTasks = new FilteredList<>(this.geeKeep.getTaskList());
 
         pastGeeKeeps = new Stack<>();
         futureGeeKeeps = new Stack<>();
+        commandHistory = new ArrayList<>();
+        undoableCommandHistory = new ArrayList<>();
+        undoableCommandHistoryIndex = 0;
 
     }
 
     public ModelManager() {
-        this(new GeeKeep(), new UserPrefs());
+        this(new Config(), new GeeKeep(), new UserPrefs());
+    }
+
+    @Override
+    public Config getConfig() {
+        return config;
     }
 
 ```
-###### \java\seedu\geekeep\model\ModelManager.java
+###### /java/seedu/geekeep/model/ModelManager.java
 ``` java
     @Override
-    public void undo() throws NothingToUndoException {
+    public String undo() throws NothingToUndoException {
         if (pastGeeKeeps.empty()) {
             throw new NothingToUndoException();
         }
         futureGeeKeeps.push(new GeeKeep(geeKeep));
         geeKeep.resetData(pastGeeKeeps.pop());
         indicateGeeKeepChanged();
+        return undoableCommandHistory.get(--undoableCommandHistoryIndex);
     }
 
     @Override
-    public void redo() throws NothingToRedoException {
+    public String redo() throws NothingToRedoException {
         if (futureGeeKeeps.empty()) {
             throw new NothingToRedoException();
         }
         pastGeeKeeps.push(new GeeKeep(geeKeep));
         geeKeep.resetData(futureGeeKeeps.pop());
         indicateGeeKeepChanged();
+        return undoableCommandHistory.get(undoableCommandHistoryIndex++);
     }
 
-}
+    @Override
+    public List<String> getCommandHistory() {
+        return Collections.unmodifiableList(commandHistory);
+    }
+
+    @Override
+    public void appendCommandHistory(String commandText) {
+        commandHistory.add(commandText);
+    }
+
+    @Override
+    public void updateUndoableCommandHistory(String commandText) {
+        while (undoableCommandHistory.size() > undoableCommandHistoryIndex) {
+            undoableCommandHistory.remove(undoableCommandHistory.size() - 1);
+        }
+        undoableCommandHistory.add(commandText);
+        undoableCommandHistoryIndex++;
+    }
+
+    public void updateGeekeepHistory(ReadOnlyGeeKeep originalGeekeepClone) {
+        pastGeeKeeps.add(originalGeekeepClone);
+        futureGeeKeeps.clear();
+    }
+
+
+
+    @Override
+    public void setGeekeepFilePath(String filePath) {
+        config.setGeeKeepFilePath(filePath);
+        indicateGeekeepFilePathChanged();
+    }
+
+    /** Raises an event to indicate the geeKeepFilePath has changed */
+    private void indicateGeekeepFilePathChanged() {
+        raise(new GeekeepFilePathChangedEvent(config, geeKeep));
+    }
+
+    // ========== Inner classes/interfaces used for filtering =================================================
+
+    interface Expression {
+        boolean satisfies(ReadOnlyTask task);
+
+        @Override
+        String toString();
+    }
+
+    private class PredicateExpression implements Expression {
+
+        private final Qualifier qualifier;
+
+        PredicateExpression(Qualifier qualifier) {
+            this.qualifier = qualifier;
+        }
+
+        @Override
+        public boolean satisfies(ReadOnlyTask task) {
+            return qualifier.run(task);
+        }
+    }
+
+    interface Qualifier {
+        boolean run(ReadOnlyTask task);
+
+        @Override
+        String toString();
+    }
+
 ```
-###### \java\seedu\geekeep\storage\XmlAdaptedTask.java
+###### /java/seedu/geekeep/storage/XmlAdaptedTask.java
 ``` java
 package seedu.geekeep.storage;
 
@@ -128,7 +224,7 @@ import seedu.geekeep.commons.exceptions.IllegalValueException;
 import seedu.geekeep.model.tag.Tag;
 import seedu.geekeep.model.tag.UniqueTagList;
 import seedu.geekeep.model.task.DateTime;
-import seedu.geekeep.model.task.Location;
+import seedu.geekeep.model.task.Description;
 import seedu.geekeep.model.task.ReadOnlyTask;
 import seedu.geekeep.model.task.Task;
 import seedu.geekeep.model.task.Title;
@@ -145,7 +241,7 @@ public class XmlAdaptedTask {
     @XmlElement(required = true)
     private String endDateTime;
     @XmlElement(required = true)
-    private String location;
+    private String description;
     @XmlElement
     private List<XmlAdaptedTag> tagged = new ArrayList<>();
     @XmlElement
@@ -167,7 +263,7 @@ public class XmlAdaptedTask {
         title = source.getTitle().title;
         endDateTime = source.getEndDateTime() == null ? "" : source.getEndDateTime().value;
         startDateTime = source.getStartDateTime() == null ? "" : source.getStartDateTime().value;
-        location = source.getLocation() == null ? "" : source.getLocation().value;
+        description = source.getDescriptoin() == null ? "" : source.getDescriptoin().value;
         tagged = new ArrayList<>();
         for (Tag tag : source.getTags()) {
             tagged.add(new XmlAdaptedTag(tag));
@@ -188,18 +284,18 @@ public class XmlAdaptedTask {
         final Title title = new Title(this.title);
         final DateTime endDateTime = convertStringToDateTime(this.endDateTime);
         final DateTime startDateTime = convertStringToDateTime(this.startDateTime);
-        final Location location = convertStringToLocation(this.location);
+        final Description description = convertStringToDescription(this.description);
         final UniqueTagList tags = new UniqueTagList(taskTags);
         final boolean isDone = this.isDone.equals("True");
-        return new Task(title, startDateTime, endDateTime, location, tags, isDone);
+        return new Task(title, startDateTime, endDateTime, description, tags, isDone);
     }
 
     private DateTime convertStringToDateTime(String date) throws IllegalValueException {
         return date.isEmpty() ? null : new DateTime(date);
     }
 
-    private Location convertStringToLocation(String location) throws IllegalValueException {
-        return location.isEmpty() ? null : new Location(location);
+    private Description convertStringToDescription(String description) throws IllegalValueException {
+        return description.isEmpty() ? null : new Description(description);
     }
 }
 ```
