--- a/collated/test/A0121658E.md
+++ b/collated/test/A0121658E.md
@@ -1,11 +1,11 @@
 # A0121658E
-###### \java\seedu\geekeep\testutil\TestTask.java
+###### /java/seedu/geekeep/testutil/TestTask.java
 ``` java
 package seedu.geekeep.testutil;
 
 import seedu.geekeep.model.tag.UniqueTagList;
 import seedu.geekeep.model.task.DateTime;
-import seedu.geekeep.model.task.Location;
+import seedu.geekeep.model.task.Description;
 import seedu.geekeep.model.task.ReadOnlyTask;
 import seedu.geekeep.model.task.Title;
 
@@ -15,7 +15,7 @@ import seedu.geekeep.model.task.Title;
 public class TestTask implements ReadOnlyTask {
 
     private Title title;
-    private Location location;
+    private Description description;
     private DateTime startDateTime;
     private DateTime endDateTime;
     private UniqueTagList tags;
@@ -31,14 +31,14 @@ public class TestTask implements ReadOnlyTask {
         this.title = taskToCopy.getTitle();
         this.endDateTime = taskToCopy.getEndDateTime();
         this.startDateTime = taskToCopy.getStartDateTime();
-        this.location = taskToCopy.getLocation();
+        this.description = taskToCopy.getDescriptoin();
         this.tags = taskToCopy.getTags();
     }
 
     public String getAddCommand() {
         StringBuilder sb = new StringBuilder();
         sb.append("add " + this.getTitle().title + " ");
-        sb.append("l/" + this.getLocation().value + " ");
+        sb.append("d/" + this.getDescriptoin().value + " ");
         sb.append("e/" + this.getEndDateTime().value + " ");
         sb.append("s/" + this.getStartDateTime().value + " ");
         this.getTags().asObservableList().stream().forEach(s -> sb.append("t/" + s.tagName + " "));
