--- a/collated/test/A0139438W.md
+++ b/collated/test/A0139438W.md
@@ -1,53 +1,64 @@
 # A0139438W
-###### \java\seedu\geekeep\logic\LogicManagerTest.java
+###### /java/seedu/geekeep/logic/LogicManagerTest.java
 ``` java
-        public Task deadline() throws Exception {
-            Title title = new Title("Deadline");
+        public Task getTestEvent() throws Exception {
+            Title title = new Title("Event");
             DateTime endDateTime = new DateTime("01-05-17 1630");
-            Location location = new Location("222, beta street");
+            DateTime startDateTime = new DateTime("01-04-17 1630");
+            Description description = new Description("111, alpha street");
             Tag tag1 = new Tag("tag1");
             Tag tag2 = new Tag("longertag2");
             UniqueTagList tags = new UniqueTagList(tag1, tag2);
-            return new Task(title, null, endDateTime, location, tags, false);
+            return new Task(title, startDateTime, endDateTime, description, tags, false);
         }
 
-        public Task eventWithoutTime() throws Exception {
+        public Task getTestDeadline() throws Exception {
+            Title title = new Title("Deadline");
+            DateTime endDateTime = new DateTime("01-05-17 1630");
+            Description description = new Description("222, beta street");
+            Tag tag1 = new Tag("tag1");
+            Tag tag2 = new Tag("longertag2");
+            UniqueTagList tags = new UniqueTagList(tag1, tag2);
+            return new Task(title, null, endDateTime, description, tags, false);
+        }
+
+        public Task getTestEventWithoutTime() throws Exception {
             Title title = new Title("Event Without Time");
             DateTime endDateTime = new DateTime("01-05-17");
             DateTime startDateTime = new DateTime("01-04-17");
-            Location location = new Location("111, alpha street");
+            Description description = new Description("111, alpha street");
             Tag tag1 = new Tag("tag1");
             Tag tag2 = new Tag("longertag2");
             UniqueTagList tags = new UniqueTagList(tag1, tag2);
-            return new Task(title, startDateTime, endDateTime, location, tags, false);
+            return new Task(title, startDateTime, endDateTime, description, tags, false);
         }
 
-        public Task floatingTask() throws Exception {
+        public Task getTestFloatingTask() throws Exception {
             Title title = new Title("Floating Task");
-            Location location = new Location("333, charlie street");
+            Description description = new Description("333, charlie street");
             Tag tag1 = new Tag("tag1");
             Tag tag2 = new Tag("longertag2");
             UniqueTagList tags = new UniqueTagList(tag1, tag2);
-            return new Task(title, null, null, location, tags, false);
+            return new Task(title, null, null, description, tags, false);
         }
 
 ```
-###### \java\seedu\geekeep\logic\LogicManagerTest.java
+###### /java/seedu/geekeep/logic/LogicManagerTest.java
 ``` java
     @Test
     public void execute_add_invalidTaskData() {
-        assertCommandFailure("add []\\[;] s/01-04-17 1630 e/01-05-17 1630 l/valid, location",
+        assertCommandFailure("add []\\[;] s/01-04-17 1630 e/01-05-17 1630 d/valid, location",
                 Title.MESSAGE_TITLE_CONSTRAINTS);
-        assertCommandFailure("add Valid Title s/not_numbers e/01-05-17 1630 l/valid, location",
+        assertCommandFailure("add Valid Title s/not_numbers e/01-05-17 1630 d/valid, location",
                 DateTime.MESSAGE_DATETIME_CONSTRAINTS);
-        assertCommandFailure("add Valid Title s/01-04-17 1630 e/not_numbers l/valid, location",
+        assertCommandFailure("add Valid Title s/01-04-17 1630 e/not_numbers d/valid, location",
                 DateTime.MESSAGE_DATETIME_CONSTRAINTS);
-        assertCommandFailure("add Valid Title s/01-05-17 1630 e/01-04-17 1630 l/valid, location",
+        assertCommandFailure("add Valid Title s/01-05-17 1630 e/01-04-17 1630 d/valid, location",
                 Task.MESSAGE_ENDDATETIME_LATER_CONSTRAINTS);
-        assertCommandFailure("add Valid Title s/01-05-17 1630 l/valid, location",
+        assertCommandFailure("add Valid Title s/01-05-17 1630 d/valid, location",
                 Task.MESSAGE_DATETIME_MATCH_CONSTRAINTS);
         assertCommandFailure(
-                "add Valid Title s/01-04-17 1630 e/01-05-17 1630 l/valid, location t/invalid_-[.tag",
+                "add Valid Title s/01-04-17 1630 e/01-05-17 1630 d/valid, location t/invalid_-[.tag",
                 Tag.MESSAGE_TAG_CONSTRAINTS);
     }
 
@@ -57,7 +68,7 @@
         TestDataHelper helper = new TestDataHelper();
 
         // add a new event
-        Task toBeAdded = helper.event();
+        Task toBeAdded = helper.getTestEvent();
         GeeKeep expectedAB = new GeeKeep();
         expectedAB.addTask(toBeAdded);
 
@@ -68,7 +79,7 @@
                 expectedAB.getTaskList());
 
         // add a new event without time field
-        toBeAdded = helper.eventWithoutTime();
+        toBeAdded = helper.getTestEventWithoutTime();
         expectedAB.addTask(toBeAdded);
 
         // execute command and verify result
@@ -78,7 +89,7 @@
                 expectedAB.getTaskList());
 
         // add a new deadline
-        toBeAdded = helper.deadline();
+        toBeAdded = helper.getTestDeadline();
         expectedAB.addTask(toBeAdded);
 
         // execute command and verify result
@@ -88,7 +99,7 @@
                 expectedAB.getTaskList());
 
         // add a new floating task
-        toBeAdded = helper.floatingTask();
+        toBeAdded = helper.getTestFloatingTask();
         expectedAB.addTask(toBeAdded);
 
         // execute command and verify result
@@ -102,7 +113,7 @@
     public void execute_addDuplicate_notAllowed() throws Exception {
         // setup expectations
         TestDataHelper helper = new TestDataHelper();
-        Task toBeAdded = helper.event();
+        Task toBeAdded = helper.getTestEvent();
 
         // setup starting state
         model.addTask(toBeAdded); // task already in internal geekeep
@@ -150,8 +161,48 @@
     }
 
 ```
-###### \java\seedu\geekeep\logic\LogicManagerTest.java
+###### /java/seedu/geekeep/logic/LogicManagerTest.java
 ``` java
+    @Test
+    public void execute_undo_redo_errorMessageShown() throws Exception {
+        String expectedMessage = String.format(UndoCommand.MESSAGE_NOTHING_TO_UNDO);
+        assertCommandFailure("undo", expectedMessage);
+
+        expectedMessage = String.format(RedoCommand.MESSAGE_NOTHING_TO_REDO);
+        assertCommandFailure("redo", expectedMessage);
+    }
+
+    @Test
+    public void execute_undo_redo_Success() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        List<Task> threeTasks = helper.generateTaskList(3);
+
+        GeeKeep expectedAB = helper.generateGeeKeep(threeTasks);
+        expectedAB.removeTask(threeTasks.get(2));
+        helper.addToModel(model, threeTasks);
+
+        assertCommandSuccess("delete 3",
+                String.format(DeleteCommand.MESSAGE_DELETE_TASK_SUCCESS, threeTasks.get(2)),
+                expectedAB,
+                expectedAB.getTaskList());
+
+        // Add deleted task back to expected Geekeep
+        expectedAB.addTask(threeTasks.get(2));
+
+        assertCommandSuccess("undo",
+                String.format(UndoCommand.MESSAGE_SUCCESS, "delete 3"),
+                expectedAB,
+                expectedAB.getTaskList());
+
+        // Deleted task from expected Geekeep again
+        expectedAB.removeTask(threeTasks.get(2));
+
+        assertCommandSuccess("redo",
+                String.format(RedoCommand.MESSAGE_SUCCESS, "delete 3"),
+                expectedAB,
+                expectedAB.getTaskList());
+    }
+
     @Test
     public void execute_done_undone_CorrectTask() throws Exception {
         TestDataHelper helper = new TestDataHelper();
@@ -190,7 +241,7 @@
     }
 
 ```
-###### \java\seedu\geekeep\logic\LogicManagerTest.java
+###### /java/seedu/geekeep/logic/LogicManagerTest.java
 ``` java
     @Test
     public void execute_listdone_listundone_showsTasksCorrectly() throws Exception {
@@ -207,23 +258,22 @@
                 expectedAB,
                 expectedList);
 
-        // prepare expectations for list done tasks
-        expectedAB.markTaskDone(0);
-        expectedList = expectedAB.getTaskList().filtered(t -> t.isDone());
+        assertCommandFailure("listundone dummy words", ListUndoneCommand.MESSAGE_USAGE);
 
-        assertCommandSuccess("done 1",
-                String.format(DoneCommand.MESSAGE_DONE_TASK_SUCCESS, expectedList.get(0)),
-                expectedAB,
-                expectedAB.getTaskList());
+        // prepare expectations for list done tasks
+        expectedList = expectedAB.getTaskList().filtered(t -> t.isDone());
 
         assertCommandSuccess("listdone",
                 ListDoneCommand.MESSAGE_SUCCESS,
                 expectedAB,
                 expectedList);
+
+        assertCommandFailure("listdone dummy words", ListDoneCommand.MESSAGE_USAGE);
+
     }
 
 ```
-###### \java\seedu\geekeep\model\task\DateTimeTest.java
+###### /java/seedu/geekeep/model/task/DateTimeTest.java
 ``` java
 package seedu.geekeep.model.task;
 
